# sid

./: .clang-format  README.md
apps/: CMakeLists.txt
apps/game/: main.cpp
apps/game/GUI/: gui_render_pass.cpp  gui_render_pass.h
apps/game/gui/: viewer_gui.cpp  viewer_gui.h
apps/viewer/: main.cpp
apps/viewer/gui/: viewer_gui.cpp  viewer_gui.h  viewer_model.h  viewer_panel.cpp  viewer_panel.h
shaders/fragment/: imgui.fs  model.fs  simple_fragment.fs
shaders/vertex/: imgui.vs  model.vs  simple_vertex.vs
sources/: CMakeLists.txt
sources/glad/: glad.c  glad.h
sources/glsl/: program.cpp  program.h  program_builder.cpp  program_builder.h  shader.cpp  shader.h
sources/gui/: controls.cpp  controls.h  gui_layout.h  gui_panel.cpp  gui_panel.h  gui_render_pass.cpp  gui_render_pass.h  imgui_support.cpp  imgui_support.h
sources/render/: model_rp.cpp  model_rp.h  render.cpp  render.h  render_pass.h  scene.cpp  scene.h  simple_rp.cpp  simple_rp.h
sources/scene/: camera.cpp  camera.h  model.cpp  model.h  scene.cpp  scene.h
sources/utility/: opengl_support.cpp  opengl_support.h  window.cpp  window.h
tests/unit/: dummy_test.cpp
